Fixed menu button on mobile
Menu button now stays to the right of menu options.

--- a/css/styles.css
+++ b/css/styles.css
@@ -855,8 +855,8 @@ footer .social {
 
 @media screen and (max-width: 700px) {
   .custom-nav {
-    display: flex;
     flex-direction: column;
+    align-items: flex-end;
     padding: 5px;
     height: auto;
   }
@@ -865,19 +865,19 @@ footer .social {
   }
   .custom-nav a.icon {
     float: right;
-    display: block;
+    display: flex;
   }
-  /* .custom-nav.responsive {
-      position: relative;
-  } */
+  .custom-nav.responsive {
+    position: relative;
+    align-items: center;
+  }
   .custom-nav.responsive .icon {
     position: relative;
+    top: 0;
     right: 0;
   }
   .custom-nav.responsive a {
-    float: none;
     display: flex;
-    justify-content: center;
     text-align: left;
   }
   #home {
